--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
     <script>
       $(function () {
         const socket = io();
+        socket.on('online', function(msg){
+          console.log(msg);
+        });
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
           return false;
+        });
+        socket.on('chat message', function(msg){
+          $('#messages').append($('<li>').text(msg));
         });
       });
     </script>
